✨ feat: add hot reload command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean:mobile": "rm -rf src/targets/mobile/www",
     "commons:build": "webpack --config webpack.config.js --bail",
     "commons:watch": "webpack --config webpack.config.js --watch --progress",
-    "commons:watch:standalone": "webpack-dev-server --progress --config webpack.config.js --port 8282 --inline --hot",
+    "commons:watch:hot": "HOT_RELOAD=1 webpack-dev-server --progress --config webpack.config.js --port 8282 --inline --hot",
     "deploy": "git-directory-deploy --directory build/ --branch=${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-https://$GITHUB_TOKEN@github.com/cozy/cozy-banks.git}",
     "cozyPublish": "babel-node ./scripts/publish.js",
     "tx": "true || tx pull --all || true",
@@ -27,6 +27,7 @@
     "test": "jest",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
+    "watch:browser:hot": "NODE_ENV=browser:development npm run commons:watch:hot",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
     "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
     "serve:mobile": "(cd src/targets/mobile/www && http-server -p 8005)",
