--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "cozy-client": "0.4.3",
     "cozy-client-js": "0.9.0",
     "cozy-konnector-libs": "^3.0.13",
-    "cozy-ui": "9.1.0",
+    "cozy-ui": "https://github.com/drazik/cozy-ui.git#selectbox-overlay",
     "date-fns": "^1.28.2",
     "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
