✨ feat: ability to use hot reload on mobile

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "npm run build:browser && npm run build:services",
     "build:browser": "NODE_ENV=${NODE_ENV:-browser:production} npm run commons:build",
     "build:mobile": "NODE_ENV=mobile:production npm run commons:build -- --env.target=mobile",
+    "build:mobile:hot": "HOT_RELOAD=1 NODE_ENV=mobile:development npm run commons:build -- --env.target=mobile",
     "clean:browser": "rm -rf build/*",
     "clean:mobile": "rm -rf src/targets/mobile/www",
     "commons:build": "webpack --config webpack.config.js --bail",
@@ -29,6 +30,7 @@
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
     "watch:browser:hot": "NODE_ENV=browser:development npm run commons:watch:hot",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
+    "watch:mobile:hot": "NODE_ENV=mobile:development npm run commons:watch:hot",
     "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
     "serve:mobile": "(cd src/targets/mobile/www && http-server -p 8005)",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
