--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-select": "2.0.0-beta.6",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
