--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "cozy-client": "0.5.0",
     "cozy-client-js": "0.9.0",
     "cozy-konnector-libs": "^3.0.13",
-    "cozy-ui": "9.3.1",
+    "cozy-ui": "^9.5.0",
     "date-fns": "^1.28.2",
     "fastclick": "^1.0.6",
     "hammerjs": "^2.0.8",
@@ -166,7 +166,6 @@
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "react-select": "2.0.0-beta.6",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
