--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "string-replace-webpack-plugin": "^0.1.3",
     "timezone": "^1.0.13",
     "velocity-animate": "^1.5.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "yarn.lock": "^0.0.1-security"
   },
   "jest": {
