--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint:js": "eslint --fix 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -p 8025:8025 -v \"$(pwd)/build/\":/data/cozy-app/banks cozy/cozy-app-dev",
-    "test": "jest",
+    "test": "jest src",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
     "watch:browser:hot": "NODE_ENV=browser:development npm run commons:watch:hot",
@@ -115,9 +115,9 @@
     "prop-types": "15.6.1",
     "react": "15.6.2",
     "react-addons-test-utils": "15.6.2",
-    "react-dom": "16.4.0",
+    "react-dom": "15.6.2",
     "react-styleguidist": "6.5.3",
-    "react-test-renderer": "16.4.0",
+    "react-test-renderer": "15",
     "script-ext-html-webpack-plugin": "1.8.8",
     "sort-css-media-queries": "1.3.4",
     "style-loader": "0.21.0",
