🔧 chore: include rootDir as module path for tests to be able to require test dir easily

--- a/package.json
+++ b/package.json
@@ -188,7 +188,8 @@
     ],
     "moduleDirectories": [
       "node_modules",
-      "src"
+      "src",
+      "<rootDir>"
     ],
     "moduleNameMapper": {
       "\\.(png|gif|jpe?g|svg)$": "<rootDir>/test/__mocks__/fileMock.js",
