--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "cozy-client": "0.5.0",
     "cozy-client-js": "0.9.0",
     "cozy-konnector-libs": "^3.0.13",
-    "cozy-ui": "git://github.com/cozy/cozy-ui.git#disabled-option-style",
+    "cozy-ui": "^9.7.0",
     "date-fns": "^1.28.2",
     "fastclick": "^1.0.6",
     "hammerjs": "^2.0.8",
