feat: Add Sentry to have exception error logs 🤖

--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "preact": "8.2.9",
     "preact-compat": "^3.17.0",
     "preact-portal": "^1.1.2",
+    "raven-js": "3.26.2",
     "raw-loader": "^0.5.1",
     "react-chartjs-2": "^2.0.5",
     "react-hint": "^3.0.0",
@@ -168,6 +169,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
+    "redux-raven-middleware": "1.2.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
     "shebang-loader": "^0.0.1",
