--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "postcss-assets-webpack-plugin": "1.1.0",
     "postcss-discard-duplicates": "2.1.0",
     "postcss-loader": "2.1.5",
+    "pretty": "^2.0.0",
     "prop-types": "15.6.1",
     "react": "15.6.2",
     "react-addons-test-utils": "15.6.2",
