chore: Add script to list brands from github ⚙️

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "watch:browser:hot": "NODE_ENV=browser:development npm run commons:watch:hot",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
     "util:check-dev-server": "[[ $DEV_SERVER_HOST == '' ]] && echo 'Please set DEV_SERVER_HOST for hot reload on mobile (ex: export DEV_SERVER_HOST=192.168.1.36)' && exit 1 || exit 0",
+    "brands": "babel-node ./scripts/brands.js",
     "watch:mobile:hot": "npm run util:check-dev-server && NODE_ENV=mobile:development npm run commons:watch:hot",
     "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
     "serve:mobile": "(cd src/targets/mobile/www && http-server -p 8005)",
@@ -115,12 +116,15 @@
     "postcss-discard-duplicates": "2.1.0",
     "postcss-loader": "2.1.5",
     "pretty": "^2.0.0",
+    "progress": "2.0.0",
     "prop-types": "15.6.1",
     "react": "15.6.2",
     "react-addons-test-utils": "15.6.2",
     "react-dom": "15.6.2",
     "react-styleguidist": "6.5.3",
     "react-test-renderer": "15",
+    "request": "2.87.0",
+    "request-promise-native": "1.0.5",
     "script-ext-html-webpack-plugin": "1.8.8",
     "sort-css-media-queries": "1.3.4",
     "style-loader": "0.21.0",
