--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
     "serve:mobile": "(cd src/targets/mobile/www && http-server -p 8005)",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
-    "mobile:prepare": "(cd src/targets/mobile && cordova prepare && bundle install)",
+    "mobile:prepare": "(cd src/targets/mobile && cordova prepare && bundle install) && [[ $(uname) == 'Darwin' ]] && npm run ios:install_pods",
     "mobile:clean": "(cd src/targets/mobile && rm -rf package.json node_modules platforms plugins)",
     "mobile:build": "npm run build:mobile && npm run mobile:clean && npm run mobile:prepare",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
