--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "identity-obj-proxy": "3.0.0",
     "imports-loader": "0.8.0",
     "jest": "23.1.0",
+    "jest-raw-loader": "^1.0.1",
     "json-loader": "0.5.7",
     "npm-run-all": "4.1.3",
     "postcss": "6.0.23",
@@ -201,13 +202,17 @@
       "\\.(png|gif|jpe?g|svg)$": "<rootDir>/test/__mocks__/fileMock.js",
       "styl$": "identity-obj-proxy",
       "css$": "identity-obj-proxy",
-      "hbs$": "identity-obj-proxy",
-      "webapp$": "identity-obj-proxy"
+      "webapp$": "identity-obj-proxy",
+      "^handlebars$": "handlebars/dist/handlebars.min.js"
     },
     "testPathIgnorePatterns": [
       "node_modules",
       "src/targets/mobile/"
     ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "hbs$": "jest-raw-loader"
+    },
     "transformIgnorePatterns": [
       "node_modules/(?!(cozy-ui|cozy-client))"
     ],
