✨ feat: add run-services script

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services --watch",
+    "run:services": "scripts/run-service",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "styleguide:deploy": "yarn git-directory-deploy -- --directory styleguide --branch master --repo docs",
@@ -90,6 +91,7 @@
     "babel-runtime": "6.26.0",
     "copy-webpack-plugin": "4.5.1",
     "cozy-app-publish": "0.3.6",
+    "cozy-jobs-cli": "^1.4.1",
     "css-loader": "0.28.11",
     "css-mqpacker": "6.0.2",
     "csswring": "6.0.3",
@@ -149,7 +151,8 @@
     "cozy-client": "0.6.1",
     "cozy-client-js": "0.11.0",
     "cozy-device-helper": "1.2.1",
-    "cozy-konnector-libs": "^3.0.13",
+    "cozy-konnector-libs": "^4.5.4",
+    "cozy-logger": "^1.1.8",
     "cozy-ui": "^10.0.1",
     "date-fns": "^1.28.2",
     "fastclick": "^1.0.6",
