--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-cozy-app": "^0.8.0",
     "chart.js": "^2.7.0",
-    "classificator": "0.3.0",
+    "classificator": "kosssi/classificator#0d0e9fd909cb9fc7815937296db426705ce5c442",
     "classnames": "^2.2.0",
     "cordova": "^7.1.0",
     "cozy-authentication": "1.3.0",
