chore: Use npm instead of yarn in scripts

--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
     "ios:publish": "npm run mobile:build && (cd src/targets/mobile/platforms/ios && pod install && cd ../.. && bundle exec fastlane ios deploy)",
     "commons:services": "webpack --config config/webpack.target.services.js",
-    "build:services": "NODE_ENV=services:production yarn run commons:services",
-    "watch:services": "NODE_ENV=services:development yarn run commons:services --watch",
+    "build:services": "NODE_ENV=services:production npm run commons:services",
+    "watch:services": "NODE_ENV=services:development npm run commons:services -- --watch",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "styleguide:deploy": "yarn git-directory-deploy -- --directory styleguide --branch master --repo docs",
+    "styleguide:deploy": "git-directory-deploy --directory styleguide --branch master --repo docs",
     "postmerge": "yarnhook",
     "postcheckout": "yarnhook",
     "postrewrite": "yarnhook",
