--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "cordova": "^7.1.0",
     "cozy-authentication": "1.3.0",
     "cozy-bar": "5.0.7",
-    "cozy-client": "^0.6.1",
+    "cozy-client": "^1.0.0-beta.16",
     "cozy-client-js": "0.11.0",
     "cozy-device-helper": "1.2.1",
     "cozy-konnector-libs": "^3.0.13",
