--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "watch:services": "NODE_ENV=services:development npm run commons:services -- --watch",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "styleguide:deploy": "git-directory-deploy --directory styleguide --branch master --repo docs",
+    "styleguide:deploy": "git-directory-deploy --directory ./docs/build/styleguide --branch master --repo docs",
     "postmerge": "yarnhook",
     "postcheckout": "yarnhook",
     "postrewrite": "yarnhook",
