--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "cozy-client": "^1.0.0-beta.26",
     "cozy-client-js": "0.11.0",
     "cozy-device-helper": "1.2.1",
+    "cozy-flags": "^1.0.2",
     "cozy-konnector-libs": "^3.0.13",
     "cozy-pouch-link": "^1.0.0-beta.21",
     "cozy-stack-client": "^1.0.0-beta.21",
