--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "postcheckout": "yarnhook",
     "postrewrite": "yarnhook",
     "fixtures": "ACH import test/fixtures/operations.json test/fixtures/helpers.js",
-    "release": "./scripts/release.sh"
+    "release": "./scripts/release.sh",
+    "commitmsg": "commitlint -e $GIT_PARAMS"
   },
   "repository": {
     "type": "git",
@@ -75,6 +76,7 @@
   },
   "homepage": "https://github.com/cozy/cozy-banks#readme",
   "devDependencies": {
+    "@commitlint/cli": "7.0.0",
     "ach": "0.3.0",
     "autoprefixer": "8.6.5",
     "babel-cli": "6.26.0",
@@ -90,6 +92,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-runtime": "6.26.0",
+    "commitlint-config-cozy": "0.2.2",
     "copy-webpack-plugin": "4.5.2",
     "cozy-app-publish": "0.5.1",
     "css-loader": "0.28.11",
@@ -232,6 +235,11 @@
     "testMatch": [
       "**/__tests__/**/*.js?(x)",
       "**/?(*.)(spec).js?(x)"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "cozy"
     ]
   }
 }
