--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "classnames": "^2.2.0",
     "cordova": "^7.1.0",
     "cozy-authentication": "1.3.0",
-    "cozy-bar": "^5.0.9-beta.0",
+    "cozy-bar": "^5.1.0",
     "cozy-client": "^1.0.0-beta.26",
     "cozy-client-js": "0.12.0",
     "cozy-device-helper": "1.4.5",
