--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "cordova": "^7.1.0",
     "cozy-authentication": "1.3.0",
     "cozy-bar": "^5.1.0",
-    "cozy-client": "^1.0.0-beta.26",
+    "cozy-client": "^2.0.0",
     "cozy-client-js": "0.12.0",
     "cozy-device-helper": "1.4.5",
     "cozy-flags": "1.2.2",
