chore: Remove old reference

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prewatch:browser": "npm run clean:browser",
     "prewatch:mobile": "npm run clean:mobile",
     "lint": "npm-run-all --parallel 'lint:*'",
-    "lint:js": "eslint --fix 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js' --ignore-pattern 'src/utils/old-cozy-client'",
+    "lint:js": "eslint --fix 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -p 8025:8025 -v \"$(pwd)/build/\":/data/cozy-app/banks cozy/cozy-app-dev",
     "test": "jest src",
