--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "timezone": "^1.0.13",
     "velocity-animate": "^1.5.0",
     "webpack-bundle-analyzer": "^2.13.1",
+    "whatwg-fetch": "^3.0.0",
     "yarn.lock": "^0.0.1-security"
   },
   "jest": {
@@ -226,7 +227,7 @@
     "globals": {
       "__ALLOW_HTTP__": false,
       "__TARGET__": "browser",
-      "__DEVELOPMENT__": false,
+      "__DEV__": false,
       "__SENTRY_TOKEN__": "token",
       "cozy": {}
     },
