--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "cozy-client": "^2.13.1",
     "cozy-client-js": "0.12.1",
     "cozy-device-helper": "1.4.7",
-    "cozy-flags": "1.2.4",
+    "cozy-flags": "^1.2.5",
     "cozy-interapp": "0.2.3",
     "cozy-konnector-libs": "^3.0.13",
     "cozy-pouch-link": "^2.15.3",
