--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "babel-plugin-lodash": "^3.3.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-cozy-app": "^0.8.0",
+    "bluebird": "^3.5.2",
     "chart.js": "^2.7.0",
     "classificator": "kosssi/classificator#0d0e9fd909cb9fc7815937296db426705ce5c442",
     "classnames": "^2.2.0",
@@ -153,6 +154,7 @@
     "cozy-ui": "^10.0.1",
     "date-fns": "^1.28.2",
     "fastclick": "^1.0.6",
+    "geco": "^0.11.1",
     "hammerjs": "^2.0.8",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "localforage": "^1.5.0",
