--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "babel-plugin-lodash": "3.3.2",
     "babel-polyfill": "6.26.0",
     "babel-preset-cozy-app": "1.1.0",
+    "bluebird": "^3.5.2",
     "chart.js": "2.7.2",
     "classificator": "0.3.2",
     "classnames": "2.2.5",
@@ -163,6 +164,7 @@
     "date-fns": "1.29.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "fastclick": "1.0.6",
+    "geco": "^0.11.1",
     "hammerjs": "2.0.8",
     "html-webpack-harddisk-plugin": "0.2.0",
     "localforage": "1.7.1",
