chore: Update with cozy renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,5 @@
 {
-  "timezone": "Europe/Paris",
-  "schedule": "before 5am every monday",
-  "patch": {
-    "automerge": true
-  }
+  "extends": [
+    "cozy-app"
+  ]
 }
