--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "classnames": "2.2.6",
     "cordova": "7.1.0",
     "cozy-authentication": "1.3.0",
-    "cozy-bar": "6.7.5",
+    "cozy-bar": "^6.8.3",
     "cozy-client": "4.7.0",
     "cozy-client-js": "0.14.2",
     "cozy-device-helper": "1.4.14",
@@ -158,7 +158,7 @@
     "cozy-interapp": "0.2.13",
     "cozy-konnector-libs": "3.8.1",
     "cozy-pouch-link": "4.7.0",
-    "cozy-ui": "13.2.1",
+    "cozy-ui": "^17.0.1",
     "d3": "5.7.0",
     "date-fns": "1.29.0",
     "enzyme-adapter-react-16": "1.6.0",
