--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "classnames": "^2.2.0",
     "cordova": "^7.1.0",
     "cozy-authentication": "1.3.0",
-    "cozy-bar": "^5.1.0",
+    "cozy-bar": "6.1.3",
     "cozy-client": "^2.20.1",
     "cozy-client-js": "0.12.1",
     "cozy-device-helper": "1.4.7",
