--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "commitlint-config-cozy": "0.3.0",
     "copy-webpack-plugin": "4.5.2",
     "cozy-app-publish": "0.8.1",
+    "cozy-jobs-cli": "^1.5.1",
     "css-loader": "0.28.11",
     "css-mqpacker": "7.0.0",
     "csswring": "6.0.3",
