feat(matching): Track events with Piwik

--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "html-webpack-harddisk-plugin": "0.2.0",
     "localforage": "1.7.1",
     "lodash": "4.17.5",
+    "matomo-tracker": "^2.2.0",
     "mjml": "3.3.5",
     "node-polyglot": "2.2.2",
     "null-loader": "0.1.1",
