--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "cordova": "7.1.0",
     "cozy-authentication": "1.3.0",
     "cozy-bar": "6.1.3",
-    "cozy-client": "2.22.1",
+    "cozy-client": "^3.0.6",
     "cozy-client-js": "0.12.1",
     "cozy-device-helper": "1.4.7",
     "cozy-flags": "1.2.5",
