--- a/package.json
+++ b/package.json
@@ -122,11 +122,11 @@
     "postcss-loader": "3.0.0",
     "pretty": "2.0.0",
     "prop-types": "15.6.2",
-    "react": "15.6.2",
-    "react-addons-test-utils": "15.6.2",
-    "react-dom": "15.6.2",
+    "react": "16.2",
+    "react-addons-test-utils": "16.0.0-alpha.3",
+    "react-dom": "16.2",
     "react-styleguidist": "6.5.3",
-    "react-test-renderer": "15.6.2",
+    "react-test-renderer": "16",
     "script-ext-html-webpack-plugin": "1.8.8",
     "sort-css-media-queries": "1.3.4",
     "style-loader": "0.22.1",
