chore: Set React version for eslint/react

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,10 @@
   "extends": ["cozy-app/react"],
   "globals": {
     "jest": true
+  },
+  "settings": {
+    "react": {
+      "version": "16.2"
+    }
   }
 }
