--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
     "dummy-json": "2.0.0",
     "duplicate-package-checker-webpack-plugin": "2.1.0",
     "enzyme": "3.6.0",
-    "enzyme-adapter-react-15": "1.0.6",
     "eslint-config-cozy-app": "1.1.1",
     "eslint-loader": "2.1.0",
     "extract-text-webpack-plugin": "3.0.2",
@@ -162,6 +161,7 @@
     "cozy-ui": "13.1.5",
     "d3": "5.5.0",
     "date-fns": "1.29.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "fastclick": "1.0.6",
     "hammerjs": "2.0.8",
     "html-webpack-harddisk-plugin": "0.2.0",
