feat: Correct NODE_ENV
Otherwise React (and potentially other libs) will not be compiled
correctly in production

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/main.jsx",
   "scripts": {
     "build": "npm run build:browser && npm run build:services",
-    "build:browser": "NODE_ENV=${NODE_ENV:-browser:production} npm run commons:build",
-    "build:mobile": "NODE_ENV=mobile:production npm run commons:build -- --env.target=mobile",
+    "build:browser": "NODE_ENV=${NODE_ENV:-production} npm run commons:build",
+    "build:mobile": "NODE_ENV=production npm run commons:build -- --env.target=mobile",
     "build:mobile:hot": "npm run util:check-dev-server && HOT_RELOAD=1 NODE_ENV=mobile:development npm run commons:build -- --env.target=mobile",
     "clean:browser": "rm -rf build/*",
     "clean:mobile": "rm -rf src/targets/mobile/www",
@@ -29,12 +29,12 @@
     "test": "jest src",
     "posttest": "madge -b src/ --webpack-config webpack.config.js -c --extensions js,jsx src/main.jsx",
     "watch": "npm run watch:browser",
-    "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
-    "watch:browser:hot": "NODE_ENV=browser:development npm run commons:watch:hot",
-    "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
+    "watch:browser": "NODE_ENV=development npm run commons:watch",
+    "watch:browser:hot": "NODE_ENV=development npm run commons:watch:hot",
+    "watch:mobile": "NODE_ENV=development npm run commons:watch -- --env.target=mobile",
     "util:check-dev-server": "[[ $DEV_SERVER_HOST == '' ]] && echo 'Please set DEV_SERVER_HOST for hot reload on mobile (ex: export DEV_SERVER_HOST=192.168.1.36)' && exit 1 || exit 0",
-    "watch:mobile:hot": "npm run util:check-dev-server && NODE_ENV=mobile:development npm run commons:watch:hot",
-    "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
+    "watch:mobile:hot": "npm run util:check-dev-server && NODE_ENV=development npm run commons:watch:hot",
+    "watch:mobile:production": "NODE_ENV=production npm run commons:watch -- --env.target=mobile",
     "serve:mobile": "(cd src/targets/mobile/www && http-server -p 8005)",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
     "mobile:prepare": "(cd src/targets/mobile && cordova prepare && bundle install) && [[ $(uname) == 'Darwin' ]] && npm run ios:install_pods",
@@ -52,8 +52,8 @@
     "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
     "ios:publish": "npm run mobile:build && (cd src/targets/mobile/platforms/ios && pod install && cd ../.. && bundle exec fastlane ios deploy)",
     "commons:services": "webpack --config config/webpack.target.services.js",
-    "build:services": "NODE_ENV=services:production npm run commons:services",
-    "watch:services": "NODE_ENV=services:development npm run commons:services -- --watch",
+    "build:services": "NODE_ENV=production npm run commons:services",
+    "watch:services": "NODE_ENV=development npm run commons:services -- --watch",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "styleguide:deploy": "git-directory-deploy --directory ./docs/build/styleguide --branch master --repo docs",
