chore: Change build steps for android

--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "mobile:build": "npm run build:mobile && npm run mobile:clean && npm run mobile:prepare",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
     "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
-    "android:release": "npm run mobile:build && (cd src/targets/mobile && cordova build android --release)",
-    "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/cozy-banks-release-key.jks --out build/android/cozy-banks.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
-    "android:metadata": "(cd src/targets/mobile && bundle exec fastlane android metadata)",
-    "android:publish": "npm run android:signed && (cd src/targets/mobile && bundle exec fastlane android deploy)",
-    "ios:install_pods": "(cd src/targets/mobile/platforms/ios && pod install)",
+    "android:metadata": "cd src/targets/mobile && bundle exec fastlane android metadata",
+    "android:build": "npm run mobile:build && (cd src/targets/mobile && cordova build android --release)",
+    "android:sign": "cd src/targets/mobile && apksigner sign --ks keys/android/cozy-banks-release-key.jks --out build/android/cozy-banks.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk",
+    "android:deploy": "cd src/targets/mobile && bundle exec fastlane android deploy",
+    "android:publish": "npm run android:build && npm run android:sign && npm run android:deploy",
+    "ios:install_pods": "cd src/targets/mobile/platforms/ios && pod install",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
     "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
