--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "file-loader": "2.0.0",
     "git-directory-deploy": "1.5.1",
     "handlebars-layouts": "3.1.4",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.2",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
     "imports-loader": "0.8.0",
@@ -126,7 +126,7 @@
     "react-dom": "16.6.0",
     "react-styleguidist": "6.5.3",
     "react-test-renderer": "16.6.0",
-    "script-ext-html-webpack-plugin": "1.8.8",
+    "script-ext-html-webpack-plugin": "^2.0.3",
     "sort-css-media-queries": "1.4.1",
     "style-loader": "0.23.1",
     "stylint": "1.5.9",
@@ -135,7 +135,8 @@
     "svg-sprite-loader": "3.9.2",
     "tar": "4.4.6",
     "webpack": "4.23.1",
-    "webpack-dev-server": "2.11.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "4.1.4",
     "yarnhook": "0.3.0"
   },
@@ -165,7 +166,7 @@
     "fastclick": "1.0.6",
     "geco": "0.11.1",
     "hammerjs": "2.0.8",
-    "html-webpack-harddisk-plugin": "0.2.0",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "localforage": "1.7.3",
     "lodash": "4.17.5",
     "matomo-tracker": "2.2.0",
