chore: Upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -150,14 +150,14 @@
     "classnames": "2.2.5",
     "cordova": "7.1.0",
     "cozy-authentication": "1.3.0",
-    "cozy-bar": "6.1.3",
-    "cozy-client": "^3.6.4",
+    "cozy-bar": "5.0.9",
+    "cozy-client": "3.6.4",
     "cozy-client-js": "0.12.1",
     "cozy-device-helper": "1.4.7",
     "cozy-flags": "1.2.5",
     "cozy-interapp": "0.2.6",
     "cozy-konnector-libs": "3.8.1",
-    "cozy-pouch-link": "3.6.3",
+    "cozy-pouch-link": "3.7.1",
     "cozy-ui": "13.1.5",
     "d3": "5.5.0",
     "date-fns": "1.29.0",
