chore: Add flag for XCode 10

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "android:deploy": "cd src/targets/mobile && bundle exec fastlane android deploy",
     "android:publish": "npm run android:build && npm run android:sign && npm run android:deploy",
     "ios:install_pods": "cd src/targets/mobile/platforms/ios && pod install",
-    "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
-    "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
+    "ios:run": "(cd src/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --device)",
+    "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --emulator)",
     "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
     "ios:publish": "npm run mobile:build && (cd src/targets/mobile/platforms/ios && pod install && cd ../.. && bundle exec fastlane ios deploy)",
     "commons:services": "webpack --config config/webpack.target.services.js",
