feat: Add pouch on web to develop easily

--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
       "__ALLOW_HTTP__": false,
       "__TARGET__": "browser",
       "__DEV__": false,
+      "__POUCH__": false,
       "__SENTRY_TOKEN__": "token",
       "cozy": {}
     },
