chore: Use hot reload mode for dev in browser

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "prebuild:browser": "npm run clean:browser",
     "prebuild:mobile": "npm run clean:mobile",
     "pretest": "npm run lint",
-    "prewatch:browser": "npm run clean:browser",
     "prewatch:mobile": "npm run clean:mobile",
     "lint": "npm-run-all --parallel 'lint:*'",
     "lint:js": "eslint --fix 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
@@ -29,8 +28,7 @@
     "test": "jest src",
     "posttest": "madge -b src/ --webpack-config webpack.config.js -c --extensions js,jsx src/main.jsx",
     "watch": "npm run watch:browser",
-    "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
-    "watch:browser:hot": "NODE_ENV=browser:development npm run commons:watch:hot",
+    "watch:browser": "NODE_ENV=browser:development npm run commons:watch:hot",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
     "util:check-dev-server": "[[ $DEV_SERVER_HOST == '' ]] && echo 'Please set DEV_SERVER_HOST for hot reload on mobile (ex: export DEV_SERVER_HOST=192.168.1.36)' && exit 1 || exit 0",
     "watch:mobile:hot": "npm run util:check-dev-server && NODE_ENV=mobile:development npm run commons:watch:hot",
