--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "cozy-flags": "1.2.11",
     "cozy-interapp": "0.2.13",
     "cozy-konnector-libs": "3.8.1",
-    "cozy-pouch-link": "4.0.0",
+    "cozy-pouch-link": "4.1.0",
     "cozy-ui": "13.2.1",
     "d3": "5.7.0",
     "date-fns": "1.29.0",
@@ -174,6 +174,7 @@
     "null-loader": "0.1.1",
     "number-to-locale-string": "1.2.0",
     "piwik-react-router": "0.8.2",
+    "pouchdb-adapter-cordova-sqlite": "2.0.5",
     "preact": "8.3.1",
     "preact-compat": "3.18.4",
     "preact-portal": "1.1.3",
