--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "d3": "5.7.0",
     "date-fns": "1.29.0",
     "enzyme-adapter-react-16": "1.6.0",
+    "expose-loader": "^0.7.5",
     "fastclick": "1.0.6",
     "geco": "0.11.1",
     "hammerjs": "2.0.8",
