--- a/package.json
+++ b/package.json
@@ -103,7 +103,6 @@
     "enzyme": "3.7.0",
     "eslint-config-cozy-app": "1.1.4",
     "eslint-loader": "2.1.1",
-    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "2.0.0",
     "git-directory-deploy": "1.5.1",
     "handlebars-layouts": "3.1.4",
@@ -114,6 +113,7 @@
     "jest": "23.6.0",
     "json-loader": "0.5.7",
     "madge": "3.3.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "npm-run-all": "4.1.3",
     "postcss": "7.0.5",
     "postcss-assets-webpack-plugin": "1.1.0",
