--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "commitlint-config-cozy": "0.3.9",
     "copy-webpack-plugin": "4.6.0",
     "cozy-app-publish": "0.9.0",
-    "cozy-jobs-cli": "1.5.5",
+    "cozy-jobs-cli": "^1.5.8",
     "css-loader": "1.0.1",
     "css-mqpacker": "7.0.0",
     "csswring": "7.0.0",
@@ -155,11 +155,11 @@
     "cozy-authentication": "^1.4.0-beta1",
     "cozy-bar": "6.8.3",
     "cozy-client": "4.12.2",
-    "cozy-client-js": "0.14.2",
+    "cozy-client-js": "^0.14.2",
     "cozy-device-helper": "1.4.14",
     "cozy-flags": "1.2.11",
     "cozy-interapp": "0.2.13",
-    "cozy-konnector-libs": "3.8.1",
+    "cozy-konnector-libs": "^4.11.8",
     "cozy-pouch-link": "4.12.1",
     "cozy-ui": "^17.3.3",
     "d3": "5.7.0",
