--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "cozy-client": "4.12.2",
     "cozy-client-js": "^0.14.2",
     "cozy-device-helper": "1.4.14",
+    "cozy-doctypes": "1.17.0",
     "cozy-flags": "1.2.11",
     "cozy-interapp": "0.2.13",
     "cozy-konnector-libs": "^4.11.8",
