--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "react-markdown": "2.5.1",
     "react-redux": "5.1.1",
     "react-router": "3.2.1",
+    "react-sizeme": "2.5.2",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
     "redux-raven-middleware": "1.2.0",
