--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "yarnhook": "0.3.0"
   },
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-polyfill": "6.26.0",
     "babel-preset-cozy-app": "1.1.0",
