--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
     "styleguide:deploy": "git-directory-deploy --directory ./docs/build/styleguide --branch master --repo docs",
-    "fixtures": "ACH import test/fixtures/operations.json test/fixtures/helpers.js",
+    "fixtures": "ACH import test/fixtures/demo.json test/fixtures/helpers.js",
     "release": "./scripts/release.sh"
   },
   "husky": {
