--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "express": "4.16.4",
     "file-loader": "3.0.1",
     "git-directory-deploy": "1.5.1",
+    "glob": "7.1.3",
     "handlebars-layouts": "3.1.4",
     "html-webpack-plugin": "4.0.0-beta.5",
     "husky": "1.3.0",
