--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "cozy-ui": "17.10.1",
     "d3": "5.7.0",
     "date-fns": "1.30.1",
+    "detect-node": "2.0.4",
     "enzyme-adapter-react-16": "1.7.1",
     "expose-loader": "0.7.5",
     "fastclick": "1.0.6",
