--- a/package.json
+++ b/package.json
@@ -166,7 +166,9 @@
     "cozy-interapp": "0.2.17",
     "cozy-konnector-libs": "4.12.4",
     "cozy-pouch-link": "5.4.2",
-    "cozy-ui": "17.17.2",
+    "cozy-ui": "18.1.0",
+    "cozy-konnector-libs": "4.12.2",
+    "cozy-pouch-link": "5.2.2",
     "d3": "5.7.0",
     "date-fns": "1.30.1",
     "detect-node": "2.0.4",
