--- a/package.json
+++ b/package.json
@@ -165,10 +165,9 @@
     "cozy-flags": "1.5.1",
     "cozy-interapp": "0.2.18",
     "cozy-konnector-libs": "4.12.4",
-    "cozy-pouch-link": "5.4.2",
-    "cozy-ui": "18.4.1",
-    "cozy-konnector-libs": "4.12.4",
     "cozy-pouch-link": "5.5.0",
+    "cozy-stack-client": "5.5.0",
+    "cozy-ui": "18.4.1",
     "d3": "5.7.0",
     "date-fns": "1.30.1",
     "detect-node": "2.0.4",
