--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
     "cordova": "7.1.0",
     "cozy-authentication": "1.4.0-beta1",
     "cozy-bar": "6.10.3",
-    "cozy-client": "5.7.4",
+    "cozy-client": "^5.7.6",
     "cozy-client-js": "0.14.2",
     "cozy-device-helper": "1.6.3",
     "cozy-doctypes": "1.32.0",
