chore: Bump to v0.11.8
feat: Use node instead of babel-node

feat: Check if file exists before rsync

fix: Handle async errors

feat: Add logs when creating archive

chore(deps): update dependency cozy-ach to v1.10.0

chore: Bump to v0.11.9

fix(History): Check that transaction exists

chore(publish): Fix remoteFileExists

feat(transactions): Use realisationDate if the account is CreditCard

feat(TransactionSelectDates): Handle transaction in the future

chore(fixtures): Add credit card account demo fixtures

chore(publish): Use cozy-app-publish instead of custom script

docs(LineChart): Add jsdoc blocks

feat(LineChart): Update scales on resize

refactor: Move updateAxis after createAxis

fix: Remove stroke-dash attributes after animation

refactor: Remove unnecessary function

refactor: Reorder functions

fix: Save date not coordinate

feat: Update tooltip x position from itemX

feat: Split / Create an update function for all elements

refactor: Optimize render and update elements

refactor: Use bisect to shorten the search item

refactor: Use lodash memoize

chore: Add type property to manifest

feat: Use format date from cozy-ui

chore: Remove deploy on specific instances after publish

fix: Second safeguard for local categ by reweighting amounts tokens

fix: :nail_care: Add banking category to update redirection

docs: Explained the reweighting of naive bayes parameters

refactor(GroupPanel): Remove useless require

fix(SelectDates): Disabled arrow color

feat(GroupPanel): Add unchecked styles

fix(AccountRow): Half opacity when disabled

fix: Update cozy-bar token

feat: Add triggers on offline doctype

fix: Update store with new token

feat(account): Update account types mappings

docs: Account types mapping

fix(AccountsSettings): Use getAccountType helper

fix(AccountSettings): Use getAccountType helper

feat: Turn on balance panels UI by default

fix: Padding when no movements

feat: Show konnector update info only on balance page

refactor: Remove unused 

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozy-banks",
-  "version": "0.11.7",
+  "version": "0.11.9",
   "main": "src/main.jsx",
   "scripts": {
     "build": "npm run build:browser && npm run build:services",
@@ -13,7 +13,7 @@
     "commons:watch": "webpack --config webpack.config.js --watch --progress",
     "commons:watch:hot": "HOT_RELOAD=1 webpack-dev-server --progress --config webpack.config.js --port 8282 --inline --hot",
     "deploy": "git-directory-deploy --directory build/ --branch=${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-https://$GITHUB_TOKEN@github.com/cozy/cozy-banks.git}",
-    "cozyPublish": "babel-node ./scripts/publish.js",
+    "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --prepublish downcloud --postpublish mattermost --space banks",
     "uploadStaticFiles": "babel-node ./scripts/upload-static-files.js",
     "tx": "true || tx pull --all || true",
     "precommons:build": "npm-run-all lint tx",
@@ -98,7 +98,7 @@
     "babel-runtime": "6.26.0",
     "commitlint-config-cozy": "0.3.16",
     "copy-webpack-plugin": "4.6.0",
-    "cozy-ach": "1.9.0",
+    "cozy-ach": "1.10.0",
     "cozy-app-publish": "0.10.5",
     "cozy-jobs-cli": "1.7.1",
     "css-loader": "2.1.0",
@@ -139,7 +139,6 @@
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "svg-sprite-loader": "3.9.2",
-    "tar": "4.4.8",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14",
