--- a/package.json
+++ b/package.json
@@ -59,7 +59,11 @@
     "styleguide:build": "styleguidist build",
     "styleguide:deploy": "git-directory-deploy --directory ./docs/build/styleguide --branch master --repo docs",
     "fixtures": "ACH import test/fixtures/demo.json test/fixtures/helpers.js",
-    "release": "./scripts/release.sh"
+    "release": "./scripts/release.sh",
+    "encrypt-banking-tests": "cd src/ducks/categorization/; make encrypted.tar.gz.gpg",
+    "clean-banking-tests": "cd src/ducks/categorization/; make clean",
+    "decrypt-banking-tests": "cd src/ducks/categorization; gpg -d encrypted.tar.gz.gpg | tar xz",
+    "download-banking-tests": "cd src/ducks/categorization; wget https://github.com/cozy/cozy-libs/raw/master/packages/cozy-doctypes/src/banking/encrypted.tar.gz.gpg"
   },
   "husky": {
     "hooks": {
