chore: Remove deploy on specific instances after publish

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,12 +41,12 @@ jobs:
         - provider: script
           repo: cozy/cozy-banks
           skip-cleanup: true
-          script: yarn cozyPublish && ./scripts/deploy-on-cozy && yarn uploadStaticFiles
+          script: yarn cozyPublish && yarn uploadStaticFiles
           on:
             branch: master
         - provider: script
           repo: cozy/cozy-banks
           skip-cleanup: true
-          script: yarn cozyPublish && ./scripts/deploy-on-cozy && yarn uploadStaticFiles
+          script: yarn cozyPublish && yarn uploadStaticFiles
           on:
             tags: true
