--- a/package.json
+++ b/package.json
@@ -172,12 +172,14 @@
     "cozy-pouch-link": "5.7.6",
     "cozy-stack-client": "5.6.1",
     "cozy-ui": "18.13.1",
+    "csv-writer": "^1.2.0",
     "d3": "5.7.0",
     "date-fns": "1.30.1",
     "detect-node": "2.0.4",
     "enzyme-adapter-react-16": "1.8.0",
     "expose-loader": "0.7.5",
     "fastclick": "1.0.6",
+    "fs": "^0.0.1-security",
     "geco": "0.11.1",
     "hammerjs": "2.0.8",
     "html-webpack-harddisk-plugin": "1.0.1",
