--- a/package.json
+++ b/package.json
@@ -169,11 +169,13 @@
     "cozy-pouch-link": "5.7.6",
     "cozy-stack-client": "5.6.1",
     "cozy-ui": "19.3.0",
+    "csv-writer": "^1.2.0",
     "d3": "5.9.1",
     "date-fns": "1.30.1",
     "detect-node": "2.0.4",
     "expose-loader": "0.7.5",
     "fastclick": "1.0.6",
+    "fs": "^0.0.1-security",
     "geco": "0.11.1",
     "hammerjs": "2.0.8",
     "html-webpack-harddisk-plugin": "1.0.1",
