chore: Updated dependencies

--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "css-loader": "2.1.0",
     "css-mqpacker": "7.0.0",
     "csswring": "7.0.0",
-    "csv-writer": "^1.2.0",
+    "csv-writer": "1.2.0",
     "dummy-json": "2.0.0",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "enzyme": "3.9.0",
@@ -175,7 +175,6 @@
     "detect-node": "2.0.4",
     "expose-loader": "0.7.5",
     "fastclick": "1.0.6",
-    "fs": "^0.0.1-security",
     "geco": "0.11.1",
     "hammerjs": "2.0.8",
     "html-webpack-harddisk-plugin": "1.0.1",
